--- a/index.css
+++ b/index.css
@@ -1,37 +1,1 @@
-.k-table-index-column[data-v-95e0715a] {
-  width: 3rem;
-}
-.k-bar[data-v-95e0715a] {
-  padding-bottom: var(--spacing-4);
-}
-.truncate[data-v-95e0715a] {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.badge[data-v-95e0715a] {
-  display: inline-flex;
-  align-items: center;
-  gap: var(--spacing-1);
-  border-radius: var(--rounded-sm);
-  padding: var(--spacing-1) var(--spacing-2);
-  background: var(--color-gray-200);
-  color: var(--color-gray-800);
-}
-.fire-up[data-v-95e0715a] {
-  padding-left: var(--spacing-1);
-  background: var(--color-yellow-300);
-  color: var(--color-yellow-800);
-}
-.fire-on[data-v-95e0715a] {
-  padding-left: var(--spacing-1);
-  background: var(--color-green-300);
-  color: var(--color-green-800);
-}
-.k-language-column[data-v-95e0715a] {
-  width: 6rem;
-}
-.k-state-column[data-v-95e0715a] {
-  text-align: right;
-  width: 9rem;
-}
+.k-table-index-column[data-v-36d4403b]{width:3rem}.k-bar[data-v-36d4403b]{padding-bottom:var(--spacing-4)}.truncate[data-v-36d4403b]{overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.badge[data-v-36d4403b]{display:inline-flex;align-items:center;gap:var(--spacing-1);border-radius:var(--rounded-sm);padding:var(--spacing-1) var(--spacing-2);background:var(--color-gray-200);color:var(--color-gray-800)}.fire-up[data-v-36d4403b]{padding-left:var(--spacing-1);background:var(--color-yellow-300);color:var(--color-yellow-800)}.fire-on[data-v-36d4403b]{padding-left:var(--spacing-1);background:var(--color-green-300);color:var(--color-green-800)}.k-language-column[data-v-36d4403b]{width:6rem}.k-state-column[data-v-36d4403b]{text-align:right;width:9rem}
